[tool.poetry]
name = "lvmdap"
version = "1.1.0"
description = "LVM Data Analisys Pipeline"
license = "MIT"
authors = ["Sebastian F. Sanchez <sfsanchez@astro.unam.mx>","Alfredo Mejia-Narvaez <amejia@astro.unam.mx>"]
readme = "README.md"
homepage = "https://github.com/sdss/lvmdap"
repository = "https://github.com/sdss/lvmdap.git"
keywords = ["galaxies", "stellar contents", "statistics"]
classifiers = [
     "Development Status :: 3 - Alpha",
     "License OSID approved :: MIT License",
     "Programming Language :: Python :: 3.7"
]
packages = [
  {include = "lvmdap"},
]
include = ["lvmdap/etc"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.18.5"
scipy = "^1.4.1"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
tqdm = "^4.64.0"
astropy = "^5.1"
specutils = "^1.7.0"
joblib = "^1.1.0"
pyPipe3D = "^1.1.5"
emcee = "^3.1.2"
PyAstronomy = "^0.18.0"
lmfit = "^1.0.3"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
nodejs = "*"
ipympl = "*"
jupyterlab-widgets = "*"
ipywidgets = "*"

[tool.poetry.scripts]
lvm-dap = "lvmdap._cmdline.dap:_main"
cube2map = "lvmdap._cmdline.cube2map:_main"
coadd-cubes = "lvmdap._cmdline.coadd_cubes:_main"
clean-outputs="lvmdap._cmdline.clean_outputs:_main"
preprocess-muse="lvmdap._cmdline.preprocess_muse:_main"
preprocess-manga="lvmdap._cmdline.preprocess_manga:_main"
gas-cube-extractor="lvmdap._cmdline.gas_cube_extractor:_main"
mwm-dap="lvmdap._cmdline.mwm_dap:_main"
lvm-dap-conf="lvmdap._cmdline.dap:_dap_yaml"
lvm-dap-sim="lvmdap._cmdline.sim_spec_rsp:_main"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
